# smart-panels

./: .gitmodules  Panel.h  README.md  handl.py  serv.py
ButtonPanel/: Makefile
ButtonPanel/ButtonPanel/: ButtonPanel.ino  Panel.h  version.h
EnvPanel/: Makefile
EnvPanel/EnvPanel/: EnvPanel.ino  Panel.h
MusicPanel/MusicPanel/: MusicPanel.ino  Panel.h
SCAD/: Desk_v1.scad  README.md  hotas_mount.scad  hotas_mount_backup.scad  power_panel.scad  side_panels.scad  wednesday.scad
SCAD/src/: components.scad  panels.scad  rack.scad  utils.scad
StatusPanel/: Makefile
StatusPanel/StatusPanel/: StatusPanel.ino
TestPanel/: Makefile
TestPanel/TestPanel/: Panel.h  TestPanel.ino
TimePanel/: Makefile
TimePanel/TimePanel/: Panel.h  TimePanel.ino  my_internal_state.h
TrayPanel/TrayPanel/: Panel.h  TrayPanel.ino  version.h
arduino-cli/: install_deps.sh
evtest/: evtest.c
pinger/: Makefile  pinger.c
rust-x-arduino/: Cargo.toml
rust-x-arduino/src/: main.rs
smart-desk/: README.md  project.clj
smart-desk/doc/: intro.md
smart-desk/src/smart_desk/: core.clj
smart-desk/test/smart_desk/: core_test.clj
usb2tcp/: Cargo.toml
usb2tcp/src/: main.rs
